<resources>
    <string name="app_name1">pda</string>
    <string name="cancel">取消</string>
    <string name="submit">确定</string>
    <string name="add">新增</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="submit1">提交</string>
    <string name="close">关闭</string>
    <string name="select">筛选</string>

    <string name="error_data">数据解析错误</string>
    <string name="error_json">JSON数据解析错误</string>
    <string name="error_fail">网络请求失败</string>
    <string name="error_loading_fail">数据请求失败</string>
    <string name="error_view">view加载错误</string>
    <string name="error_null_pointer">空指针</string>
    <string name="address_empty">请求地址为空</string>

    <string name="menu_empty">该功能暂未开放</string>

    <string name="empty">点击刷新</string>
    <string name="empty_data">无数据</string>
    <string name="empty_list_data">列表返回数据为空</string>
    <!--b版本更新dialog提示-->
    <string name="update_latest">确认是否更新到最新版本</string>
    <string name="update_older">确认是否退回到旧版本</string>
    <!--登录提示-->
    <string name="login_url">请扫描获取登录信息</string>
    <string name="login_address_empty">未扫描到登录地址</string>
    <string name="login_img_address_empty">未扫描到图片地址</string>
    <string name="login_conpany_empty">未扫描到公司编号</string>

    <string name="pre_input">请输入</string>

    <string name="preferenceCache">fangzhiCache</string>
    <string name="str_login">登录</string>
    <string name="str_sweep">扫描二维码</string>
    <string name="title_main">中达货架</string>

    <string name="title_review_list">审核列表</string>
    <string name="title_review_detail">审核详情</string>
    <string name="title_notice">发货通知单</string>
    <string name="title_menu">常用功能</string>

    <string name="item_storage">仓库</string>
    <string name="item_berch">仓位</string>
    <string name="item_storage_in">调入仓库</string>
    <string name="item_berch_in">调入仓位</string>
    <string name="item_storage_out">调出仓库</string>


    <string name="btn_cancel">注销</string>
    <string name="btn_search">搜索</string>
    <string name="btn_more">更多</string>
    <string name="btn_yes">是</string>
    <string name="btn_no">否</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--选择弹窗-->
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>

    <!--审核默认文字-->
    <string name="review_style_title">明细</string>

    <string name="icon_man">&#xe71b;</string>
    <string name="icon_lock">&#xe644;</string>

    <string name="hint_berch"> 请输入仓位</string>
    <string name="hint_storage"> 请输入仓库</string>
    <string name="hint_tray"> 请输入托盘号</string>
    <string name="hint_code"> 请输入条码</string>
    <string name="hint_notice"> 请输入通知单号</string>
    <string name="hint_cut"> 请输入修剪米数</string>

    <string name="error_berch">无此仓位</string>

    <string name="repeat_code">条码重复</string>
    <string name="empty_code">无条码</string>
    <string name="empty_storage">仓库不能为空</string>

    <string name="qty_out">发出米数</string>
    <string name="qty_real">实盘米数</string>
    <string name="qty_flaw">疵点米数</string>
    <string name="qty_tray">托盘号</string>
</resources>

