<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".output.NoticeSelectActivity">

    <LinearLayout
        android:id="@+id/ll_storage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_storage"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_40"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center_vertical|left"
            android:hint="@string/hint_storage"
            android:paddingLeft="@dimen/dp_10"
            android:singleLine="true"
            android:textColor="@color/default_content_color"
            android:textSize="@dimen/sp_14" />

        <ImageView
            android:id="@+id/iv_storage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            app:srcCompat="@mipmap/arrow_right" />
    </LinearLayout>

    <com.yyy.fangzhi.view.EditListenerView
        android:id="@+id/et_notice"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/white"
        android:gravity="center_vertical|left"
        android:hint="@string/hint_code"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/dp_10"
        android:singleLine="true"
        android:textColor="@color/default_content_color"
        android:textSize="@dimen/sp_14" />

    <LinearLayout
        android:id="@+id/ll_swicth"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="红冲"
            android:textColor="@color/default_content_color"
            android:textSize="@dimen/sp_14" />

        <Switch
            android:id="@+id/sv_red"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_weight="1"
            android:switchMinWidth="@dimen/dp_30"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:singleLine="true"
            android:text="零剪"
            android:textColor="@color/default_content_color"
            android:textSize="@dimen/sp_14" />

        <Switch
            android:id="@+id/sv_cut"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_weight="1"
            android:switchMinWidth="@dimen/dp_30"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:singleLine="true"
            android:text="完成"
            android:textColor="@color/default_content_color"
            android:textSize="@dimen/sp_14" />

        <Switch
            android:id="@+id/sv_finish"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_weight="1"
            android:switchMinWidth="@dimen/dp_30"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10">

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_search_btn"
            android:gravity="center"
            android:text="@string/btn_search"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1" />
</LinearLayout>